# Oxygen

./: Oxygen.sln  README.md
.github/workflows/: dotnet.yml  windows.yml
O2/: Commands.cs  O2.csproj  Program.cs
O2Client/: APIKeySubscriber.cs  AssetListSubscriber.cs  Client.cs  ClientException.cs  Message.cs  Subscriber.cs
O2Core/: APIKeySubscriber.cs  ArtefactDownloadStream.cs  AssetDownloadStream.cs  AssetListSubscriber.cs  Audit.cs  Cache.cs  ClientConnection.cs  ClientException.cs  DeltaCompress.cs  DownloadStream.cs  Event.cs  IDownloadStream.cs  Logger.cs  Message.cs  Metric.cs  Node.cs  O2Core.csproj  Permission.cs  Response.cs  ScheduleItem.cs  Server.cs  Subscriber.cs  UploadStream.cs
Oxygen/: Archiver.cs  AssetLabel.cs  AssetLabels.cs  AssetServer.cs  Authorizer.cs  BuildServer.cs  DataFile.cs  DataStream.cs  Level.cs  LevelObject.cs  LevelServer.cs  LoginServer.cs  Metrics.cs  MetricsServer.cs  Oxygen.csproj  Program.cs  Response.cs  Setup.cs  Tags.cs  User.cs  UserGroup.cs  UserServer.cs  Users.cs  permissions.json
Oxygen/LevelEditor/: EventStream.cs  Level.cs  LevelEventStream.cs  LevelObject.cs  LevelObjectStream.cs  LevelServer.cs  ObjectStream.cs
Oxygen/Plugins/: Plugin.cs  PluginEngine.cs  PluginNotificationStream.cs  PluginReader.cs  PluginTask.cs  Schedule.cs  Trigger.cs
Samples/Compressor/: Compressor.csproj  Program.cs
Samples/ConsoleAppSample/: ConsoleAppSample.cpp  ConsoleAppSample.vcxproj  ConsoleAppSample.vcxproj.filters  Level.cpp  Level.h
Samples/DemonEnvelope/Source/: Asset.h  CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  Editor.cpp  Editor.h  EventStream.cpp  EventStream.h  Game.cpp  Game.h  GameApplication.cpp  GameApplication.h  Item.cpp  Item.h  Level.cpp  Level.h  Level_Entity.cpp  Level_Entity.h  Network.cpp  Network.h  ObjectStream.cpp  ObjectStream.h  Party.cpp  Party.h  Program.cpp  Render.cpp  Render.h  Scripting.cpp  Scripting.h  ScriptingEditor.cpp  ScriptingEditor.h  SpriteBatch.cpp  SpriteBatch.h  Tilemap.cpp  Tilemap.h  Tileset.cpp  Tileset.h
Samples/DemonEnvelope/Source/Shaders/: Common.fx  Crimson.fx  CrimsonFont.fx  SpriteBatch.fx  Tilemap.fx
WebServer/: WebServer.csproj  _Imports.razor
WebServer/Pages/: Index.razor  _Host.cshtml
libOxygen/: AssetService.cpp  AssetService.h  BuildService.cpp  BuildService.h  CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  DeltaCompress.cpp  DeltaCompress.h  DownloadStream.cpp  DownloadStream.h  EventStream.cpp  EventStream.h  Message.cpp  Message.h  Metrics.cpp  Metrics.h  ObjectStream.cpp  ObjectStream.h  PluginService.cpp  PluginService.h  Security.cpp  Security.h  Subscriber.cpp  Subscriber.h  UploadStream.cpp  UploadStream.h
